<resources>
    <string name="defect_add_title">缺陷单</string>
    <string name="defect_title_add">录入缺陷</string>
    <string name="defect_off_line_list_title">缺陷单记录</string>
    <string name="defect_name">缺陷名称</string>
    <string name="defect_status">状态</string>
    <string name="defect_describe">缺陷描述</string>
    <string name="defect_source">缺陷来源</string>
    <string name="defect_is_device">是否是设备</string>
    <string name="defect_type">缺陷类型</string>
    <string name="defect_level">缺陷等级</string>
    <string name="defect_device_name">设备名称</string>
    <string name="defect_equip_department">受检部门</string>
    <string name="defect_assesor">评估人</string>
    <string name="defect_discover">发现人</string>
    <string name="defect_address">区域</string>
    <string name="defect_find_time">发现时间</string>
    <string name="defect_plan_handle_time">计划消缺时间</string>
    <string name="defect_source_osi">巡检</string>
    <string name="defect_source_list_is_null">来源列表为空，请稍后再试</string>
    <string name="defect_listnumber_list_is_null">挂牌号列表为空，请稍后再试</string>


    <string name="defect_leak_name">漏点名称</string>
    <string name="defect_leak_status">是否挂牌</string>
    <string name="defect_leak_number">挂牌号</string>
    <string name="defect_leak_time">挂牌时间</string>


    <string name="defect_name_is_null">缺陷名称不能为空</string>
    <string name="defect_describe_is_null">缺陷描述不能为空</string>
    <string name="defect_source_is_null">缺陷来源不能为空</string>
    <string name="defect_type_is_null">缺陷类型不能为空</string>
    <string name="defect_level_is_null">缺陷等级不能为空</string>
    <string name="defect_equip_department_is_null">受检部门不能为空</string>
    <string name="defect_assesor_is_null">评估人不能为空</string>
    <string name="defect_discover_is_null">发现人不能为空</string>
    <string name="defect_address_is_null">发现区域不能为空</string>
    <string name="defect_device_is_null">设备名称不能为空</string>
    <string name="defect_find_time_is_null">发现时间不能为空</string>
    <string name="defect_plan_handle_time_is_null">计划消缺时间不能为空</string>
    <string name="defect_choose">选择</string>
    <string name="defect_clear">清空</string>
    <string name="defect_save_local_success">保存本地成功</string>
    <string name="defect_delete_choosed_defect_list">确定删除选中的缺陷单？</string>
    <string name="defect_submit_failed_save_to_local"> 数据已经保存在本地列表，可以在本地缺陷列表中查看</string>
    <string name="defect_submit_failed">提交失败：</string>
    <string name="defect_data_is_null">数据为空</string>
    <string name="defect_data_is_not_complete">缺陷单中信息待完善，请补全信息后上传</string>
    <string name="defect_data_is_need_edit">待完善</string>
    <string name="defect_data_batch_upload">批量上传</string>
    <string name="defect_yes">是</string>
    <string name="defect_no">否</string>
    <string name="defect_detail">详情</string>

    <string name="defect_data_choose_is_null">没有选择数据</string>
    <string name="defect_check_plan_cancel_all">取消全选</string>

    <string-array name="defect_list_tab">
        <item>未提交</item>
        <item>已提交</item>
    </string-array>
</resources>