<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        layout="@layout/ly_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/indicator_right_padding"
            android:paddingRight="@dimen/indicator_right_padding">

            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:tag="name"
                app:editable="false"
                app:text="@string/defect_name" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/describe"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:tag="describe"
                app:editable="false"
                app:text="@string/defect_describe" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:tag="status"
                app:editable="false"
                app:text="@string/defect_status" />

            <include layout="@layout/v_divider_gray" />

            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/source"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="source"
                app:editable="false"
                app:key="@string/defect_source" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/type"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="type"
                app:editable="false"
                app:key="@string/defect_type" />

            <include layout="@layout/v_divider_gray" />

            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/level"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="level"
                app:editable="false"
                app:key="@string/defect_level" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/devicename"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="devicename"
                app:editable="false"
                app:key="@string/defect_device_name" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/equip_department"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="equip_department"
                app:editable="false"
                app:key="@string/defect_equip_department" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/assessor"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="assessor"
                app:editable="false"
                app:key="@string/defect_assesor" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomTextView
                android:id="@+id/discover"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="discover"
                app:editable="false"
                app:key="@string/defect_discover" />

            <include layout="@layout/v_divider_gray" />

            <com.supcon.mes.mbap.view.CustomEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:tag="address"
                app:edit_hint="@string/defect_address"
                app:editable="false"
                app:text="@string/defect_address" />

            <include layout="@layout/v_divider_gray" />


            <com.supcon.mes.mbap.view.CustomEditText
                android:id="@+id/findtime"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="findtime"
                app:editable="false"
                app:key="@string/defect_find_time" />

            <include layout="@layout/v_divider_gray" />

            <com.supcon.mes.mbap.view.CustomEditText
                android:id="@+id/planhandletime"
                style="@style/psc_edit_date_horizontal_style_text_view"
                android:tag="planhandletime"
                android:visibility="gone"
                app:editable="false"
                app:key="@string/defect_plan_handle_time" />

            <include
                layout="@layout/v_divider_gray"
                android:visibility="gone" />


            <include
                layout="@layout/ly_defect_add_leak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.supcon.mes.middleware.ui.view.FileListView
                android:id="@+id/file_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="file_list"
                android:visibility="gone" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>